# analytics-py

./: pyproject.toml
fam_analytics_py/base/: __init__.py  config.py  consumer.py
fam_analytics_py/clevertap/: config.py
fam_analytics_py/mixpanel/: client.py  config.py  consumer.py
fam_analytics_py/segment/: config.py
tests/: __init__.py  test_base.py  test_clevertap.py  test_exceptions.py  test_request.py  test_segment.py
