[tool.poetry]
name = "fam-analytics-py"
version = "0.1.0"
description = "Analytics module for Python projects"
authors = ["galaxyzpjfp <pranav.jain@fampay.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
python-dateutil = "^2.9.0.post0"
six = "^1.16.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
flake8-unused-arguments = "^0.0.13"
black = "^24.4.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
